--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       content="Instagram navigator"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Open+Sans+Condensed:wght@300&family=Open+Sans:wght@300&family=Roboto+Mono:wght@300&family=Roboto:wght@300&family=Work+Sans:wght@300&display=swap" rel="stylesheet">  
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
